--- a/.gitignore
+++ b/.gitignore
@@ -180,8 +180,9 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
 # MLflow artifacts
 mlruns/
 
 # Data 
-data/london_weather.csv
+data/
